# 2048

./: .gitignore  CMakeLists.txt
include/: BasePainter.h  Board.h  GameManager.h  GamePainter.h  GameState.h  Tile.h
sc/: BasePainter.cpp  Board.cpp  GameManager.cpp  GamePainter.cpp  Tile.cpp  main.cpp
